--- a/src/Aurochses.Testing/Aurochses.Testing.csproj
+++ b/src/Aurochses.Testing/Aurochses.Testing.csproj
@@ -23,6 +23,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
     <PackageReference Include="xunit.assert" Version="2.2.0" />
   </ItemGroup>
