--- a/test/Aurochses.Xunit.Tests/Aurochses.Xunit.Tests.csproj
+++ b/test/Aurochses.Xunit.Tests/Aurochses.Xunit.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Aurochses.Testing\Aurochses.Testing.csproj" />
+    <ProjectReference Include="..\..\src\Aurochses.Xunit\Aurochses.Xunit.csproj" />
   </ItemGroup>
 
   <ItemGroup>
