--- a/src/Aurochses.Xunit/Aurochses.Xunit.csproj
+++ b/src/Aurochses.Xunit/Aurochses.Xunit.csproj
@@ -12,6 +12,9 @@
     <PackageIconUrl>https://www.gravatar.com/avatar/cb5925a77e502401f95bf2738b123994?s=64</PackageIconUrl>
     <RepositoryUrl>https://github.com/Aurochses/Aurochses.Xunit</RepositoryUrl>
     <PackageTags>Test Unit xunit</PackageTags>
+
+    <!-- Required in both test/product projects. This is a temporary workaround for https://github.com/Microsoft/vstest/issues/800 -->
+    <DebugType>Full</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -30,7 +33,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-    <PackageReference Include="xunit.assert" Version="2.2.0" />
+    <PackageReference Include="xunit.assert" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
