added ObjectAssert.ValueEquals method

--- a/src/Aurochses.Xunit/Aurochses.Xunit.csproj
+++ b/src/Aurochses.Xunit/Aurochses.Xunit.csproj
@@ -30,6 +30,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aurochses.Runtime" Version="1.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.2" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
