--- a/src/Aurochses.Xunit/Aurochses.Xunit.csproj
+++ b/src/Aurochses.Xunit/Aurochses.Xunit.csproj
@@ -2,16 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.1.1</Version>
+    <PackageId>Aurochses.Xunit</PackageId>
+    <Version>2.1.0</Version>
     <Authors>Aurochses</Authors>
     <Company>Aurochses</Company>
-    <Description>Library for creating xUnit tests.</Description>
+    <Description>Aurochses.Xunit is a library for creating xUnit tests.</Description>
     <Copyright>Aurochses 2017</Copyright>
     <PackageLicenseUrl>https://github.com/Aurochses/Aurochses.Xunit/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Aurochses/Aurochses.Xunit/wiki</PackageProjectUrl>
     <PackageIconUrl>https://www.gravatar.com/avatar/cb5925a77e502401f95bf2738b123994?s=64</PackageIconUrl>
     <RepositoryUrl>https://github.com/Aurochses/Aurochses.Xunit</RepositoryUrl>
-    <PackageTags>Test Unit xunit</PackageTags>
+    <PackageTags>Test Unit xUnit</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -19,10 +20,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aurochses.Runtime" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
-    <PackageReference Include="xunit.assert" Version="2.4.0" />
+    <PackageReference Include="Aurochses.Runtime" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+    <PackageReference Include="xunit.assert" Version="2.4.1" />
   </ItemGroup>
 
 </Project>
