rename method ValueEquals to DeepEquals

--- a/src/Aurochses.Xunit/Aurochses.Xunit.csproj
+++ b/src/Aurochses.Xunit/Aurochses.Xunit.csproj
@@ -23,8 +23,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aurochses.Runtime" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
+    <PackageReference Include="CompareNETObjects" Version="4.61.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="xunit.assert" Version="2.4.1" />
   </ItemGroup>
